# python_logging

./: LICENSE  README.md  pyproject.toml  python_logging.py  setup.py
python_logging/: colours.py  logger.py  logging.py
